# Chess-Arena-for-Python-Client

./: .coverage  .gitignore  MANIFEST.in  Makefile  README.md  TESTER.md  demo_results.json  demo_timeout_tracking.py  pyproject.toml  test_result.json  test_results.json  test_store_results.py
chess_arena_client/: AGENT.md  __main__.py  main.py  my_strategy.py  strategy.py  strategy_base.py  strategy_example_random.py  tester.py
test_data/: game_states.jsonl
tests/: test_fail_strategy.py  test_main.py  test_slow_strategy.py  test_strategy.py  test_tester.py
